<resources>
    <string name="app_name">JLPT</string>

    <string name="jlpt_test">日本能力考真题 JLPT</string>

    <string name="test_n1">N1</string>
    <string name="test_n2">N2</string>
    <string name="test_n3">N3</string>
    <string name="test_n4">N4</string>
    <string name="test_n5">N5</string>

    <string name="exam">真题：(%1$d)</string>

    <string name="pass_score1">及格：100分</string>
    <string name="pass_score2">及格：90分</string>
    <string name="pass_score3">及格：95分</string>
    <string name="pass_score4">及格：80分</string>

    <string name="empty_data">暂无数据</string>

    <string name="submit_exam">交卷</string>
</resources>