<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_bg1"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:gravity="center"
        android:text="@string/jlpt_test"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <RelativeLayout
        android:id="@+id/n1_row"
        style="@style/main_item_relativeLayout"
        android:background="@drawable/n1_gradient_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_n1"
            android:textColor="@android:color/white"
            android:textSize="@dimen/main_card_title" />

        <TextView
            android:id="@+id/n1_row_count"
            style="@style/main_item_exam_count" />

        <TextView
            style="@style/main_item_pass_score"
            android:layout_below="@+id/n1_row_count"
            android:text="@string/pass_score1" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/n2_row"
        style="@style/main_item_relativeLayout"
        android:background="@drawable/n2_gradient_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_n2"
            android:textColor="@android:color/white"
            android:textSize="@dimen/main_card_title" />

        <TextView
            android:id="@+id/n2_row_count"
            style="@style/main_item_exam_count" />

        <TextView
            style="@style/main_item_pass_score"
            android:layout_below="@+id/n2_row_count"
            android:text="@string/pass_score2" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/n3_row"
        style="@style/main_item_relativeLayout"
        android:background="@drawable/n3_gradient_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_n3"
            android:textColor="@android:color/white"
            android:textSize="@dimen/main_card_title" />

        <TextView
            android:id="@+id/n3_row_count"
            style="@style/main_item_exam_count" />

        <TextView
            style="@style/main_item_pass_score"
            android:layout_below="@+id/n3_row_count"
            android:text="@string/pass_score3" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/n4_row"
        style="@style/main_item_relativeLayout"
        android:background="@drawable/n4_gradient_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_n4"
            android:textColor="@android:color/white"
            android:textSize="@dimen/main_card_title" />

        <TextView
            android:id="@+id/n4_row_count"
            style="@style/main_item_exam_count" />

        <TextView
            style="@style/main_item_pass_score"
            android:layout_below="@+id/n4_row_count"
            android:text="@string/pass_score2" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/n5_row"
        style="@style/main_item_relativeLayout"
        android:background="@drawable/n5_gradient_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_n5"
            android:textColor="@android:color/white"
            android:textSize="@dimen/main_card_title" />

        <TextView
            android:id="@+id/n5_row_count"
            style="@style/main_item_exam_count" />

        <TextView
            style="@style/main_item_pass_score"
            android:layout_below="@+id/n5_row_count"
            android:text="@string/pass_score4" />

    </RelativeLayout>

</LinearLayout>